MGNLUI-1886 Refactoring and bug-fixing, different handling of several cases for rich-text and for plain textarea (as well as for overlays/detail sub-apps), hiding field labels while in full-screen mode (were causing overflow and UI problems when in "SHOW-ALL mode").

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
@@ -123,7 +123,6 @@ button.btn-form-help {
 .v-form-field-section {
     color: $c90;
     margin-bottom: 11px;
-    position: relative;
 }
 
 .validation-message-inline,.help-message-inline {
@@ -327,8 +326,8 @@ fieldset {
   position: static;
 }
 
-.v-magnolia-form.textarea-stretched  .v-form-field-section {
-  position: static;
+.v-magnolia-form.textarea-stretched .v-form-field-label {
+  display: none;
 }
 
 }
